[metadata]
name = LaTeX Compiler
version = 1.0
author = Amin Ranem
author_email = aminranem@googlemail.com
description = 'A program for compiling LaTeX files the convenient way by stashing the auxiliary files into a specified folder.'
url = https://github.com/amrane99/LaTeX-Compiler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = lc
packages = find:

[options.packages.find]
where = lc